# LodgeX-backend

./: .env.exemplo  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
core/: admin.py  apps.py
core/management/commands/: populate.py
core/management/resources/: __init__.py  data_booking.py  data_booking_room.py  data_booking_service.py  data_cancellation.py  data_category.py  data_discount_coupon.py  data_group.py  data_image.py  data_lodge.py  data_payment.py  data_room.py  data_room_availability.py  data_room_photo.py  data_service.py  data_user.py
core/migrations/: 0001_initial.py  0002_alter_category_name_alter_discountcoupon_description_and_more.py  0002_category_user_personal_info_alter_user_is_staff.py  0003_discountcoupon_service.py  0004_promotion_alter_discountcoupon_code.py  0005_alter_promotion_discount_percentage.py  0006_alter_category_options_alter_discountcoupon_options_and_more.py  0007_alter_room_options_room_name_booking.py  0008_roomavailability.py  0009_roomavailability_reason.py  0010_bookingservice.py  0011_cancellation.py  0012_alter_cancellation_cancellation_date_payment.py  0013_feedback.py  0014_bookingroom.py  0015_user_document_alter_user_is_active_and_more.py  0016_alter_user_is_active.py  0017_alter_cancellation_cancellation_date_and_more.py  0018_user_created_at.py  0019_alter_booking_booking_date_and_more.py  0020_promotion_name.py  0021_remove_cancellation_cancellation_fee.py  0022_alter_payment_payment_price.py  0023_alter_payment_payment_price.py  0024_rename_payment_price_payment_booking_price_and_more.py  0025_discountcoupon_active.py  0026_remove_discountcoupon_active.py
core/models/: __init__.py  booking.py  booking_room.py  booking_service.py  cancellation.py  category.py  discount_coupon.py  feedback.py  lodge.py  lodge_photo.py  payment.py  promotion.py  room.py  room_availability.py  room_photo.py  service.py  user.py
core/serializers/: __init__.py  booking.py  booking_room.py  booking_service.py  cancellation.py  discount_coupon.py  feedback.py  lodge.py  lodge_photo.py  password_reset.py  payment.py  promotion.py  room.py  room_availability.py  room_photo.py  service.py  user.py
core/signals/: __init__.py  update_last_login.py  update_payment_price.py
core/views/: __init__.py  booking.py  booking_room.py  booking_service.py  cancellation.py  discount_coupon.py  feedback.py  lodge.py  lodge_photo.py  payment.py  promotion.py  room.py  room_availability.py  room_photo.py  service.py  user.py
core/views/custom/: available_rooms.py  booking_create.py  check_discount_code.py  password_reset_confirmation.py  password_reset_request.py  room_availability_check.py
uploader/: views.py
uploader/migrations/: 0001_initial.py
uploader/serializers/: document.py
